[package]
name = "jam_theme_picker"
description = "A Bevy + mdbook enabled template repo to build on."
version = "0.2.0"
authors = ["Nilirad"]
repository = "https://github.com/Nilirad/jam_theme_picker"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

#[profile.dev]
#opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy = { version = "0.6", default-features = false}
randomorg = "1.0.4"

[patch.crates-io]
# We can override the bevy version with remote or local versions
# This method causes less pain to downstream users trying to work off your revisions
#bevy = { git = "https://github.com/bevyengine/bevy" }
#bevy = { path = "../bevy" }

[dev-dependencies]
criterion = "0.3"
# We can use a different feature set of Bevy for our library vs our examples and tests
bevy = { version = "0.6", default-features = false}

[lib]
name = "theme_picker_lib"
path = "src/lib.rs"

[[bin]]
name = "jam_theme_picker"
path = "src/main.rs"
